Depend on xmlpull-xpp3 1.2 from https://github.com/xmlpull-xpp3/xmlpull-xpp3